# FinancePlay

./: .gitignore  REFACTORING_NOTES.md  docker-compose.yml
AlphaVantage/: Daily Bitcoin Time Series.bru  Weekly Bitcoin Time Series.bru  bruno.json
FinancePlay/: ContentView.swift  FinancePlayApp.swift  Info.plist
FinancePlay.xcodeproj/: project.pbxproj
FinancePlay/Education/: EducationItemsListView.swift  EducationProgressView.swift  EducationTopicView.swift  EducationTopicsListView.swift  EducationView.swift
FinancePlay/Markets/: MarketChartView.swift  MarketDetailView.swift  MarketHeadView.swift  MarketsInfo.swift  MarketsListView.swift  MarketsView.swift
FinancePlay/Models/: AlphaVantageModels.swift  EducationTopic.swift  Market.swift  MarketType.swift  Quiz.swift  QuizQuestion.swift  SpotPrice.swift
FinancePlay/Portfolio/: PortfolioDiversityView.swift  PortfolioHistoricalView.swift  PortfolioInfoView.swift  PortfolioView.swift
FinancePlay/ReusableViews/: InfoSheetView.swift
FinancePlay/viewModels/: NetworkError.swift  Top50MarketsVM.swift
server/: .dockerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  docker-compose.yml  generate.sh  main.py  openapi.yaml  pyproject.toml
server/config/: pyproject.toml
server/config/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/cron/: fetch_data.py
server/data/: __init__.py  instruments.py  timeseries_cache.py
server/docs/: AGENTS.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md
server/routers/: instruments.py  timeseries.py
server/services/: alpha_vantage.py  (+2 more)
(+4 files in other folders)
