[project]
name = "server"
version = "0.1.0"
description = "Serve historical timeseries data for common financial instruments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.123.8",
    "openapi-python-client>=0.26.2",
    "uvicorn[standard]>=0.30.0",
    "fastapi-code-generator>=0.5.4",
]
